@@ -1,5 +1,5 @@
 AC_INIT([calcif2], [2.2.0], [Walter Brisken <wbrisken@nrao.edu>])
-AM_CONFIG_HEADER(config.h)
+AM_CONFIG_HEADER([config.h])
 
 AM_INIT_AUTOMAKE
 
@@ -9,8 +9,14 @@ AM_SANITY_CHECK
 AC_CHECK_LIB(m, erf,,[AC_MSG_ERROR("need libm")])
 
 PKG_CHECK_MODULES(DIFXIO, difxio >= 3.2.0)
-LIBS="${LIBS} ${DIFXIO_LIBS}"
-CFLAGS="${CFLAGS} ${DIFXIO_CFLAGS}"
+PKG_CHECK_MODULES(GSL, gsl, [hasgsl=true], [hasgsl=false])
+if test "$hasgsl" == "true"; then
+	AC_DEFINE([HAVE_GSL], 1, [1=has GSL (Gnu Scientific Library)])
+fi
+AM_CONDITIONAL(WITH_GSL, $hasgsl)
+
+LIBS="${LIBS} ${DIFXIO_LIBS} ${GSL_LIBS}"
+CFLAGS="${CFLAGS} ${DIFXIO_CFLAGS} ${GSL_CFLAGS}"
 
 AC_OUTPUT([ \
 	Makefile \
